--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,21 @@
-.App {
-  text-align: center;
+.calculator-body {
+  width: 25%;
+}
+
+.button-row {
+  width: 100%;
+  display: flex;
+  height: 6rem;
+  margin-bottom: 0.5rem;
+}
+
+.button {
+  color: white;
+  background-color: black;
+  border: none;
+  border-radius: 3%;
+  flex-basis: 100%;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
 }
