--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eded40;
+  background-color: #ec717a;
 }
 
 code {
