--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,7 @@
 .calculator-body {
-  width: 25%;
+  width: 35%;
   background-color: #2f383a;
-  padding-top: 5rem;
+  padding-top: 3rem;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 2rem;
@@ -12,12 +12,12 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  height: 6rem;
+  height: 5rem;
   margin-bottom: 0.5rem;
 }
 
 .button {
-  width: 7rem;
+  width: 5rem;
   color: white;
   background-color: #57585a;
   border: none;
@@ -50,4 +50,59 @@
   line-height: 100%;
   border-radius: 15px;
   padding: 0 10px;
+}
+
+#root {
+  width: 70%;
+  padding: 0;
+}
+
+nav {
+  height: 4rem;
+  background-color: #EC717A;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+.nav-links {
+  width: 25%;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+
+.nav-links a {
+  color: white;
+}
+
+.calculator-component {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
+  padding: 0 3rem;
+}
+
+h2 {
+  font-size: 3rem;
+  padding-bottom: 4rem;
+}
+
+img {
+  width: 10rem;
+  height: 10rem;
+}
+
+.calc-text-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
