--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,10 +1,43 @@
+#root {
+  width: 70%;
+  padding: 0;
+}
+
+nav {
+  height: 4rem;
+  background-color: #EC717A;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  margin-bottom: 3rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+.nav-links {
+  width: 25%;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+
+.nav-links a {
+  color: white;
+}
+
+.page-container {
+  padding: 0 3rem;
+}
+
 .calculator-body {
   width: 35%;
   background-color: #2f383a;
-  padding-top: 3rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-bottom: 2rem;
+  padding: 3rem 2rem 2rem 2rem;
   border-radius: 15px;
 }
 
@@ -52,45 +85,12 @@
   padding: 0 10px;
 }
 
-#root {
-  width: 70%;
-  padding: 0;
-}
-
-nav {
-  height: 4rem;
-  background-color: #EC717A;
-  color: white;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-}
-
-h1 {
-  font-size: 2.5rem;
-}
-
-.nav-links {
-  width: 25%;
-  display: flex;
-  justify-content: space-around;
-  color: white;
-}
-
-.nav-links a {
-  color: white;
-}
-
 .calculator-component {
   display: flex;
   justify-content: space-between;
-  margin-top: 3rem;
-  padding: 0 3rem;
 }
 
-h2 {
+h3 {
   font-size: 3rem;
   padding-bottom: 4rem;
 }
@@ -105,4 +105,13 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+h2 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+p {
+  font-size: 1.5rem;
 }
