--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,7 +4,7 @@
 }
 
 nav {
-  height: 4rem;
+  height: 5rem;
   background-color: #EC717A;
   color: white;
   font-weight: bold;
@@ -28,6 +28,7 @@ h1 {
 
 .nav-links a {
   color: white;
+  font-size: 1.3rem;
 }
 
 .page-container {
@@ -87,7 +88,7 @@ h1 {
 
 .calculator-component {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 h3 {
@@ -112,6 +113,6 @@ h2 {
   margin-bottom: 2rem;
 }
 
-p {
+.home-text {
   font-size: 1.5rem;
 }
