--- a/src/style/index.css
+++ b/src/style/index.css
@@ -22,6 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
+  background-color: #f4f3f2;
 }
 
 code {
